prevent about page from overlapping footer

--- a/styles/components.css
+++ b/styles/components.css
@@ -796,6 +796,8 @@
   display: flex;
   margin-top: auto;
   margin-bottom: auto;
+  padding-top: var(--tile);
+  padding-bottom: var(--tile);
 }
 
 .bio-content {
